# sf-cleaner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/api/: main.py  stats.py
app/enrichment/: apollo.py  base.py  linkedin.py  verify.py  zoominfo.py
app/graph/: nodes.py  state.py  workflow.py
app/reconcile/: llm_fallback.py  rules.py
app/salesforce/: client.py  models.py
app/scheduler/: dag.py
app/scoring/: activity.py  completeness.py  marketing.py  scorer.py
app/tasks/: celery_app.py  enrichment_task.py
app/vector/: cache.py  embeddings.py  store.py
force-app/main/default/objects/Lead/fields/: Annual_Revenue__c.field-meta.xml  Company_Size__c.field-meta.xml  Industry_Vertical__c.field-meta.xml  Lead_Score__c.field-meta.xml  Tech_Stack__c.field-meta.xml
tests/: test_apollo.py  test_graph.py  test_reconcile.py  test_salesforce_client.py  test_stats.py  test_verify.py  test_webhook.py
